<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/my_settings_section_features"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_source"
            android:key="bookSourceManage"
            android:summary="@string/book_source_manage_desc"
            android:title="@string/book_source_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_toc"
            android:key="ruleManage"
            android:summary="@string/rule_management_summary"
            android:title="@string/rule_management"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_ai_setting"
            android:key="aiConfig"
            android:summary="@string/ai_setting_summary"
            android:title="@string/ai_setting"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_ai_capability_tts"
            android:key="readAloudConfig"
            android:summary="@string/read_aloud_settings_summary"
            android:title="@string/read_aloud_settings"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_web"
            android:key="serviceManage"
            android:summary="@string/service_manage_desc"
            android:title="@string/service_manage"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/setting"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_backup"
            android:key="web_dav_setting"
            android:summary="@string/web_dav_set_import_old"
            android:title="@string/backup_restore"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_settings"
            android:key="setting"
            android:summary="@string/settings_menu_summary"
            android:title="@string/setting"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="aboutCategory"
        android:title="@string/other"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_bookmark"
            android:key="bookmark"
            android:summary="@string/all_bookmark"
            android:title="@string/bookmark"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_history"
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            android:title="@string/read_record"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_folder_outline"
            android:key="fileManage"
            android:summary="@string/file_manage_summary"
            android:title="@string/file_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_about"
            android:key="about"
            android:title="@string/about"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_exit"
            android:key="exit"
            android:title="@string/exit"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
