<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_precision_search"
        android:checkable="true"
        android:title="@string/precision_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_source_manage"
        android:title="@string/book_source_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_search_scope"
        android:title="@string/groups_or_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log"
        android:orderInCategory="40"
        android:title="@string/log"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_network_log"
        android:icon="@drawable/ic_cfg_about"
        android:orderInCategory="50"
        android:title="@string/network_request_log"
        app:showAsAction="never" />

</menu>
