<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <io.legado.app.ui.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="0dp"
        app:contentLayout="@layout/view_search"
        app:displayHomeAsUp="true"
        app:title="@string/book_source" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_mode_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/view_mode_list"
            style="@style/Ng.Summary"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/replace_view_list"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_mode_group"
            style="@style/Ng.Summary"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/replace_view_group"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_mode_ungrouped"
            style="@style/Ng.Summary"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/no_group"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <io.legado.app.ui.widget.recycler.scroller.FastScrollRecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </FrameLayout>

    <io.legado.app.ui.widget.SelectActionBar
        android:id="@+id/select_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
